--- a/config/config.properties
+++ b/config/config.properties
@@ -16,5 +16,5 @@ hibernate.mysql.hbm2ddl.auto=update
 
 hibernate.oracle.dialect=org.hibernate.dialect.OracleDialect
 hibernate.oracle.show_sql=true
-hibernate.oracle.format_sql=false
+hibernate.oracle.format_sql=true
 hibernate.oracle.hbm2ddl.auto=update
